--- a/templates/habricentral/html/plg_members_blog/blog.css
+++ b/templates/habricentral/html/plg_members_blog/blog.css
@@ -8,7 +8,7 @@
 	padding: 0;
 }
 
-dl.entry-meta dd.entry-options a.edit, 
+/*dl.entry-meta dd.entry-options a.edit, 
 dl.entry-meta dd.entry-options a.delete,
 div.entry dl.entry-meta dd.entry-options a.edit, 
 div.entry dl.entry-meta dd.entry-options a.delete {
@@ -16,4 +16,4 @@ div.entry dl.entry-meta dd.entry-options a.delete {
 	height: 16px;
 	text-indent: 55em;
 	padding: 0;
-}
+}*/
